# Minecraft

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/Acid/Audio/: BackgroundMusic.cpp  BackgroundMusic.h  SoundEffects.cpp  SoundEffects.h
src/Acid/Item/: ItemStack.cpp  ItemStack.h  ItemType.h  Material.cpp  Material.h
src/Acid/Maths/: Frustum.cpp  Frustum.h  GeneralMaths.cpp  GeneralMaths.h  Matrix.cpp  Matrix.h  NoiseGenerator.cpp  NoiseGenerator.h  Ray.cpp  Ray.h  Vector2XZ.cpp  Vector2XZ.h
src/Acid/Physics/: AABB.cpp  AABB.h
src/Acid/Player/: Player.cpp  Player.h
src/Acid/PublicInclude/: Acid.h  PreComp.h
src/Acid/Renderer/: ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  QuadRenderer.cpp  QuadRenderer.h  RenderMaster.cpp  RenderMaster.h  SFMLRenderer.cpp  SFMLRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  WaterRenderer.cpp  WaterRenderer.h
src/Acid/Shaders/: BasicShader.cpp  BasicShader.h  ChunkShader.cpp  ChunkShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  SkyboxShader.cpp  SkyboxShader.h  WaterShader.cpp  WaterShader.h
src/Acid/Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Entity.h  Global.h  Mesh.h  Model.cpp  Model.h  ToggleKey.cpp  ToggleKey.h
src/Acid/Source/GL/: GLFunction.cpp  GLFunctions.h
src/Acid/Source/Maths/: Matrix.cpp  Matrix.h
src/Acid/States/: PlayingState.cpp  PlayingState.h  StateBase.h
src/Acid/Texture/: BasicTexture.cpp  BasicTexture.h  CubeTexture.cpp  CubeTexture.h  TextureAtlas.cpp  TextureAtlas.h
src/Acid/Util/: Array2D.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  NonCopyable.h  NonMovable.h  Random.cpp  Random.h  Singleton.h
src/Acid/World/: World.cpp  World.h  WorldConstants.h
src/Acid/World/Block/: BlockData.cpp  BlockData.h  BlockDatabase.cpp  BlockDatabase.h  BlockID.h  ChunkBlock.cpp  ChunkBlock.h
src/Acid/World/Block/BlockType/: BlockType.cpp  BlockType.h
src/Acid/World/Chunk/: Chunk.cpp  Chunk.h  ChunkBase.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkSection.cpp  ChunkSection.h
src/Acid/World/Event/: IWorldEvent.h  PlayerDigEvent.cpp  PlayerDigEvent.h
src/Acid/World/Generation/: Biome.cpp  Biome.h  DesertBiome.cpp  DesertBiome.h  GrasslandBiome.cpp  GrasslandBiome.h  OceanBiome.cpp  OceanBiome.h  StructureBuilder.cpp  StructureBuilder.h  TemperateForestBiome.cpp  TemperateForestBiome.h  TerrainGenerator.cpp  TerrainGenerator.h  TreeGenerator.cpp  TreeGenerator.h
src/GameSrc/: Game.cpp  Game.h  main.cpp
src/GameSrc/Resources/Assets/Blocks/: Air.block  Cactus.block  DeadShrub.block  OakBark.block  OakLeaf.block  Rose.block  Sand.block  TallGrass.block  Water.block
src/GameSrc/Resources/Assets/Shaders/: BasicFragment.glsl  BasicVertex.glsl  ChunkFragment.glsl  ChunkVertex.glsl  SkyboxFragment.glsl  SkyboxVertex.glsl  WaterVertex.glsl
